restapi graphql 관련된 실행 함수 정리할 폴더 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@/Type": [
+        "src/utils/Types.ts"
       ]
     },
     "lib": [
