@core-rest and @core-graphQL 의 사용자 정의 디렉토리 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,12 @@
       ],
       "@/Type": [
         "src/utils/Types.ts"
+      ],
+      "@core-rest/*":[
+        "src/core/rest/*"
+      ],
+      "@core-graphQL/*":[
+        "src/core/graphQL/*"
       ]
     },
     "lib": [
