--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "core-js": "^3.8.3",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
+    "highlight.js": "^11.5.1",
+    "marked": "^4.0.17",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
