--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@types/overlayscrollbars": "^1.12.1",
     "@vue/apollo-composable": "^4.0.0-alpha.18",
     "core-js": "^3.8.3",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
     "highlight.js": "^11.5.1",
     "marked": "^4.0.17",
+    "overlayscrollbars-vue": "^0.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
